ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  tls:
  - hosts:
    - hello-risf.local.domain
    - hello-itsf.local.domain
    secretName: multi-domain-tls
  rules:
  - host: hello-risf.local.domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-risf
            port:
              number: 80
  - host: hello-itsf.local.domain
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: hello-itsf
            port:
              number: 80
